fix: Lower leaflet zoom control’s z-index
to ensure they don’t show on top of expandable
header menu

--- a/_sass/open-project-mixins.scss
+++ b/_sass/open-project-mixins.scss
@@ -416,6 +416,10 @@
     // To ensure leaflet does not obscure navigation sidebar
     z-index: 3;
   }
+  .leaflet-top, .leaflet-bottom {
+    // To ensure leaflet buttons get covered by expandable top menu
+    z-index: 5;
+  }
 
   > header.documentation-header,
   > section.documentation {
